11-worker-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: airflow-worker
  namespace: pdp-dev
  labels:
    tier: airflow
    component: worker
spec:
  serviceName: airflow-worker
  replicas: 1
  selector:
    matchLabels:
      tier: airflow
      component: worker
  template:
    metadata:
      labels:
        tier: airflow
        component: worker
      # annotations:
      #   checksum/configmap: 5873919b552e6912c3de9638c4c348f95c27633e3a891787d559a441a3910ffb
      #   checksum/secrets: ~
    spec:
      terminationGracePeriodSeconds: 600
      restartPolicy: Always
      serviceAccountName: "airflow-worker"
      securityContext:
        runAsUser: 50000
        fsGroup: 0
      containers:
        - name: worker
          image: docker-local.artifactory.medimpact.com/dockerhub/apache/airflow:slim-3.0.2
          imagePullPolicy: Always
          args:
            - "bash"
            - "-c"
            - "exec airflow celery worker"
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
          ports:
            - name: worker-logs
              containerPort: 8793
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 20
            failureThreshold: 5
            periodSeconds: 60
            exec:
              command:
                - sh
                - -c
                - |
                  CONNECTION_CHECK_MAX_COUNT=0 AIRFLOW__LOGGING__LOGGING_LEVEL=ERROR exec /entrypoint \
                  airflow jobs check --local --job-type WorkerJob
          volumeMounts:
            - name: dags-volume
              mountPath: "/opt/airflow/dags"
            - name: logs
              mountPath: "/opt/airflow/logs"
            - name: config
              mountPath: "/opt/airflow/airflow.cfg"
              subPath: airflow.cfg
              readOnly: true
            - name: config
              mountPath: "/opt/airflow/config/airflow_local_settings.py"
              subPath: airflow_local_settings.py
              readOnly: true
        - name: worker-log-groomer
          image: docker-local.artifactory.medimpact.com/dockerhub/apache/airflow:slim-3.0.2
          imagePullPolicy: Always
          resources:
            {}
          args:
            - "bash"
            - "-c"
            - |
              sleep 60
              exec \
              airflow jobs check --local --job-type WorkerJob --hostname $(hostname)
          volumeMounts:
            - name: logs
              mountPath: "/opt/airflow/logs"
            - name: config
              mountPath: "/opt/airflow/airflow.cfg"
              subPath: airflow.cfg
              readOnly: true
            - name: config
              mountPath: "/opt/airflow/config/airflow_local_settings.py"
              subPath: airflow_local_settings.py
              readOnly: true
      volumes:
        - name: dags-volume
          emptyDir: {}
        - name: config
          configMap:
            name: airflow-config
        - name: logs
          emptyDir: {}
