8-airflow-api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-api-server
  namespace: pdp-dev
  labels:
    tier: airflow
    component: api-server
spec:
  replicas: 1
  strategy:
    # Here we define the rolling update strategy
    # - maxSurge define how many pod we can add at a time
    # - maxUnavailable define how many pod can be unavailable
    #   during the rolling update
    # Setting maxUnavailable to 0 would make sure we have the appropriate
    # capacity during the rolling update.
    # You can also use percentage based value instead of integer.
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      tier: airflow
      component: api-server
  template:
    metadata:
      labels:
        tier: airflow
        component: api-server
    spec:
      serviceAccountName: "pdp-default"
      restartPolicy: Always
      securityContext: 
        runAsUser: 50000
        fsGroup: 0
      containers:
        - name: api-server
          image: docker-local.artifactory.medimpact.com/dockerhub/apache/airflow:slim-3.0.2
          imagePullPolicy: Always
          securityContext: 
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          args:
            - bash
            - -c
            - exec airflow api-server
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
          volumeMounts:
            - name: config
              mountPath: "/opt/airflow/airflow.cfg"
              subPath: airflow.cfg
              readOnly: true
            - name: config
              mountPath: "/opt/airflow/config/airflow_local_settings.py"
              subPath: airflow_local_settings.py
              readOnly: true
          ports:
            - name: api-server
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v2/version
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v2/version
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /api/v2/version
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            timeoutSeconds: 20
            failureThreshold: 6
            periodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: airflow-config
