9-airflow-dag-processor-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-dag-processor
  namespace: pdp-dev
  labels:
    tier: airflow
    component: dag-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: airflow
      component: dag-processor
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        tier: airflow
        component: dag-processor
    spec:
      terminationGracePeriodSeconds: 60
      restartPolicy: Always
      serviceAccountName: "pdp-default"
      securityContext:
        runAsUser: 50000
        fsGroup: 0
      containers:
        - name: dag-processor
          image: docker-local.artifactory.medimpact.com/dockerhub/apache/airflow:slim-3.0.2
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          args:
            - bash
            - -c
            - exec airflow dag-processor
          resources:
            {}
          volumeMounts:
            - name: dags-volume
              mountPath: "/opt/airflow/dags"
            - name: logs
              mountPath: "/opt/airflow/logs"
            - name: config
              mountPath: "/opt/airflow/airflow.cfg"
              subPath: airflow.cfg
              readOnly: true
            - name: config
              mountPath: "/opt/airflow/config/airflow_local_settings.py"
              subPath: airflow_local_settings.py
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 20
            failureThreshold: 5
            periodSeconds: 60
            exec:
              command:
                - sh
                - -c
                - |
                  CONNECTION_CHECK_MAX_COUNT=0 AIRFLOW__LOGGING__LOGGING_LEVEL=ERROR exec /entrypoint \
                  airflow jobs check --local --job-type DagProcessorJob
        - name: dag-processor-log-groomer
          image: docker-local.artifactory.medimpact.com/dockerhub/apache/airflow:slim-3.0.2
          imagePullPolicy: Always
          resources:
            {}
          args:
            - "bash"
            - "-c"
            - |
              exec \
              airflow jobs check --local --job-type DagProcessorJob --hostname $(hostname)
          volumeMounts:
            - name: logs
              mountPath: "/opt/airflow/logs"
            - name: config
              mountPath: "/opt/airflow/airflow.cfg"
              subPath: airflow.cfg
              readOnly: true
            - name: config
              mountPath: "/opt/airflow/config/airflow_local_settings.py"
              subPath: airflow_local_settings.py
              readOnly: true
      volumes:
        - name: dags-volume
          persistentVolumeClaim:
            claimName: pdp-specialty-dev
        - name: config
          configMap:
            name: airflow-config
        - name: logs
          emptyDir: {}
