6-airflow-api-server.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-api-server
  namespace: pdp-dev
  labels:
    tier: airflow
    component: api-server
spec:
  type: ClusterIP
  selector:
    tier: airflow
    component: api-server
  ports:
    - name: airflow-api-server
      protocol: TCP
      port: 8080
      targetPort: 8080
