7-airflow-worker.svc.yaml
# Source: airflow/templates/workers/worker-service.yaml
################################
## Airflow Worker Service
#################################
apiVersion: v1
kind: Service
metadata:
  name: airflow-worker
  labels:
    tier: airflow
    component: worker
spec:
  clusterIP: None
  selector:
    tier: airflow
    component: worker
  ports:
    - name: worker-logs
      protocol: TCP
      port: 8793
      targetPort: 8793
